# rust-monkey

./: Cargo.toml  README.md  justfile  lefthook.yml
.github/workflows/: ci.yml  deploy_playground.yml
crates/ast/: Cargo.toml
crates/ast/src/: ast.rs  ast_test.rs  lib.rs
crates/evaluator/: Cargo.toml
crates/evaluator/src/: builtins.rs  evaluator.rs  evaluator_test.rs  lib.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lexer.rs  lexer_test.rs  lib.rs
crates/object/: Cargo.toml
crates/object/src/: environment.rs  lib.rs  object.rs  object_test.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs  parser.rs  parser_test.rs
crates/repl/: Cargo.toml
crates/repl/src/: main.rs
crates/runner/: Cargo.toml  index.html
crates/runner/fixtures/: concat.mon
crates/runner/src/: lib.rs  main.rs  runner.rs
crates/token/: Cargo.toml
crates/token/src/: lib.rs  token.rs
crates/utils/: Cargo.toml
crates/utils/src/: test.rs
fixtures/: sample1.monkey  sample2.monkey  sample3.monkey
playground/: .gitignore  astro.config.mjs  biome.json  package.json  pnpm-lock.yaml
playground/src/: global.css
playground/src/components/: Header.astro
playground/src/components/features/: Code.module.css  Code.tsx
playground/src/components/features/Code/: Code.module.css  Code.tsx
playground/src/components/icons/: github.astro
playground/src/layouts/: Layout.astro
playground/src/pages/: index.astro
