[package]
name = "runner"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
token = { path = "../token" }
lexer = { path = "../lexer" }
ast = { path = "../ast" }
parser = { path = "../parser" }
evaluator = { path = "../evaluator" }
object = { path = "../object" }
wasm-bindgen = { workspace = true }
